Update build script to use independent sub scrips